samples/_failures_safe/1761656302_c89c14_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7633166a.c: In function ‘main’:
./samples/SAFE/__tmp_7633166a.c:158:19: error: expected ‘;’ at end of input
  158 |                 to
      |                   ^
      |                   ;
./samples/SAFE/__tmp_7633166a.c:158:17: error: expected declaration or statement at end of input
  158 |                 to
      |                 ^~
./samples/SAFE/__tmp_7633166a.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7633166a.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7633166a.c:158:17: error: expected declaration or statement at end of input
